--- a/core/templates/core/mails/base.html
+++ b/core/templates/core/mails/base.html
@@ -10,15 +10,10 @@
     <body style="background: #f6f6f6; font: normal 78% 'Open Sans', 'Helvetica Neue', Lato, Verdana, Arial, sans-serif; margin: 0; padding-top: 15px">
         <div style="background: #fff; margin: 0 auto; padding: 0; width: 90%">
             {% block header %}
-                {% if config.cover_image.name %} {# TOP #}
-                    <div style="background: url({{ config.cover_image.url }}) center; background-size: cover; height: 225px; width: 100%">
-                        <p style="color: #fff; float: left; font-size: 3.6em; margin: 45px 0 0 25px; text-shadow: 1px 2px 2px rgba(0, 0, 0, .7)">{{ config.company_name }}</p>
-                        <p style="color: #fff; clear: both; float: left; font-size: 2em; margin-left: 25px; text-shadow: 1px 2px 2px rgba(0, 0, 0, .7)">{{ config.short_description }}</p>
-                    </div>
-                {% elif config.logo.name %}
+                {% if config.logo.name %}
                     <div>
                         <a href="{{ service.url }}" style="display: block; float: left; width: 20%">
-                            <img src="{{ config.logo.url }}" style="margin: 9px 0 0 9px" alt="logo" height="135"/>
+                            <img src="{{ IKWEN_MEDIA_URL }}{{ config.logo.name }}" style="margin: 9px 0 0 9px" alt="logo" height="135"/>
                         </a>
                         <div style="float: left; width: 80%">
                             <div style="float: left; margin-left: 36px">
