forgotten_password link appends the entered email as a GET parameter

--- a/accesscontrol/templates/accesscontrol/sign_in_minimal.html
+++ b/accesscontrol/templates/accesscontrol/sign_in_minimal.html
@@ -261,6 +261,9 @@
                             location.hash = 'login';
                             $('#password').focus();
                             $('#login').prop('action', "{% url 'ikwen:do_sign_in' %}?{{ request.META.QUERY_STRING }}");
+                            if (username.isValidEmail()) {
+                                $('.forgotten-pwd').prop('href', '{% url 'ikwen:forgotten_password' %}' + '?' + 'username=' + username);
+                            }
                         } else {
                             $('#content').hide().addClass('register').fadeIn();
                             $('#stage').removeClass('form-wrapper').addClass('col-sm-9 col-md-8');
