Email defaults to the 'username' GET parameter

--- a/accesscontrol/templates/accesscontrol/forgotten_password.html
+++ b/accesscontrol/templates/accesscontrol/forgotten_password.html
@@ -41,7 +41,7 @@
                             {{ form.phone.errors }}
                         {% else %}
                             <label for="email">Email</label>
-                            <input id="email" class="form-control input-sm email" type="text" name="email" />
+                            <input id="email" class="form-control input-sm email" type="text" name="email" value="{{ request.GET.username }}" />
                             {{ form.email.errors }}
                         {% endif %}
                     </div>
