Navbar title on header no more clickable on mobile

--- a/core/templates/core/base_admin.html
+++ b/core/templates/core/base_admin.html
@@ -46,7 +46,8 @@
 {% endblock %}
 
 {% block header_brand %}
-<a class="navbar-brand" href="{{ settings.IKWEN_BASE_URL|append_auth_tokens:request }}"><strong>ikwen</strong></a>
+<a class="navbar-brand hidden-xs" href="{{ settings.IKWEN_BASE_URL }}"><strong>ikwen</strong></a>
+<strong class="navbar-brand visible-xs">ikwen</strong>
 {% endblock %}
 
 {% block content %}
