--- a/accesscontrol/templates/accesscontrol/sign_in_minimal.html
+++ b/accesscontrol/templates/accesscontrol/sign_in_minimal.html
@@ -118,7 +118,8 @@
                 <div class="form-group submit">
                     <button id="cancel" class="btn btn-default btn-sm hidden-xs" type="button"> {% trans "Cancel" %} </button>
                     <button id="submit" class="btn btn-primary btn-block btn-sm cta" type="submit"> {% trans "Submit" %} </button>
-                    <a class="forgotten-pwd" href="{% url 'ikwen:forgotten_password' %}">{% trans "Forgotten password ?" %}</a>
+                    {% url 'ikwen:forgotten_password' as forgotten_password_url %}
+                    <a class="forgotten-pwd" href="{{ forgotten_password_url|ikwenize }}">{% trans "Forgotten password ?" %}</a>
                     <div class="clearfix"></div>
                 </div>
             </form>
@@ -262,7 +263,7 @@
                             $('#password').focus();
                             $('#login').prop('action', "{% url 'ikwen:do_sign_in' %}?{{ request.META.QUERY_STRING }}");
                             if (username.isValidEmail()) {
-                                $('.forgotten-pwd').prop('href', '{% url 'ikwen:forgotten_password' %}' + '?' + 'username=' + username);
+                                $('.forgotten-pwd').prop('href', '{{ forgotten_password_url|ikwenize }}' + '?' + 'username=' + username);
                             }
                         } else {
                             $('#content').hide().addClass('register').fadeIn();
