--- a/billing/templates/billing/mails/notice.html
+++ b/billing/templates/billing/mails/notice.html
@@ -29,6 +29,6 @@
         </p> {# END MESSAGE #}
     {% endif %}
     {% if invoice_url %}
-        <a href="{{ invoice_url }}" target="_blank" style="background: #136b94; border-radius: 3px; color: #fff; display: block; font-size: 1.35em; font-weight: bold; margin: 15px auto 0; padding: 15px 0; text-align: center; text-decoration: none; width: 280px">{{ cta }}</a>
+        <a href="{{ invoice_url }}" target="_blank" style="background: #136b94; border-radius: 3px; color: #fff; display: block; font-size: 1.35em; margin: 15px auto 0; padding: 15px 0; text-align: center; text-decoration: none; width: 280px">{{ cta }}</a>
     {% endif %}
 {% endblock %}
