--- a/billing/templates/billing/public/donate.html
+++ b/billing/templates/billing/public/donate.html
@@ -1,128 +1,90 @@
 {% extends "core/base_bs.html" %}
-{% load i18n staticfiles humanize currency %}
+{% load i18n static humanize currency %}
 
-{% block page_title %}<title>{% trans "Mobile Money Checkout" %} - {{ service.project_name }} </title>{% endblock %}
+{% block meta %}
+    <meta name="abstract" content="{{ service.project_name }} - {{ module_donation.title }}" />
+    <meta name="description" content="{{ module_donation.content }}" />
+    <meta property="og:title" content="{{ service.project_name }} - {{ module_donation.title }}" />
+    {% if module_donation.image.name %}
+        <meta property="og:image" content="{% get_media_prefix %}{{ module_donation.image.name }}" />
+    {% else %}
+        <meta property="og:image" content="{% get_media_prefix %}{{ config.logo.name }}" />
+    {% endif %}
+    <meta property="og:description" content="{{ module_donation.content }}" />
+    <meta property="og:site_name" content="{{ service.domain|upper }}" />
+{% endblock %}
+
+{% block page_title %}<title>{{ module_donation.title }} - {{ service.project_name }} </title>{% endblock %}
 {% block head_style %}
     {{ block.super }}
-    <link rel='stylesheet' href="{% static 'ikwen/css/momo.css' %}" />
-    <link rel='stylesheet' href="{% static 'kakocase/css/deals.css' %}" />
+    <link rel='stylesheet' href="{% static 'ikwen/css/pricing.css' %}" />
+    {% if config.theme %}
+        <link rel='stylesheet' href="{{ service.app.slug }}/css/{{ config.theme.template.slug }}/{{ config.theme.slug }}.css" />
+    {% endif %}
 {% endblock %}
 
 {% block content %}
-    <div id="content" class="container">
-        <div class="banks swiper-container">
-            {% for bank in bank_list %}
-                <div class="bank swiper-slide" data-bank-id="{{ bank.id }}"></div>
-            {% endfor %}
-        </div>
-        {% for bank in bank_list %}
-            <div class="deals row" id="{{ bank.id }}">
-                <div class="col-sm-4 col-lg-3">
-                    <div class="deal">
-                        <h2 class="cost">
-                            <span>{{ order.total_cost }}</span>
-                            <sup class="currency">{{ CURRENCY.symbol }}</sup>
-                        </h2>
-                        <div class="description">
-                            <p>{% trans "Pay Cash" %}</p>
-                        </div>
-                        <button class="btn btn-sm btn-warning cta btn-block choose" data-toggle="modal"
-                                {% if user.is_anonymous %}data-target="#login-to-continue"{% endif %}
-                                data-bank-id="{{ bank.id }}" data-id="{{ deal.id }}">{% trans "Confirm" %}</button>
+    <div id="content">
+        <div class="container">
+            <h2>{{ module_donation.title }}</h2>
+            <div style="margin-top: 30px">
+                <p>{{ module_donation.content|safe }}</p>
+                {% if module_donation.image.name %}
+                    <div class="text-center">
+                        <img src="{{ module_donation.image.url }}" style="margin: 30px auto 0" class="img-responsive" />
                     </div>
-                </div>
-                {% for deal in bank.deal_list %}
-                    <div class="col-sm-4 col-lg-3">
-                        <div class="deal">
-                            <h2 class="cost">
-                                <span>{{ deal.term_cost }}</span>
-                                <sup class="currency">{{ CURRENCY.symbol }}</sup>
-                                <span>/</span>
-                                <span>{%  trans deal.frequency %}</span>
-                            </h2>
-                            <div class="description">
-                                <p>
-                                    {% if deal.first_term %}
-                                        <strong>{% trans "First Term" %}</strong>
-                                        <span>{{ deal.first_term }}</span>
-                                        <sup class="currency">CFA</sup>
-                                    {% else %}
-                                        <strong>{% trans "" %}</strong>
-                                    {% endif %}
-                                </p>
-                                <p>{{ deal.about }}</p>
-                            </div>
-                            <button class="btn btn-sm btn-warning cta btn-block choose" data-toggle="modal"
-                                    {% if user.is_anonymous %}data-target="#login-to-continue"{% endif %}
-                                    data-bank-id="{{ bank.id }}" data-id="{{ deal.id }}">{% trans "Confirm" %}</button>
-                        </div>
-                    </div>
-                {% endfor %}
+                {% endif %}
             </div>
-        {% endfor %}
-    </div>
-    <div class="modal fade" id="confirm-checkout" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content modal-info">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">{% trans "Confirm" %}</h4>
+            {% if not module_donation.image.name %}
+                <div style="height: 2px; margin: 30px 0 40px; overflow: hidden">
+                    <div class="col-xs-3" style="height: 2px; background: #E53935"></div>
+                    <div class="col-xs-3" style="height: 2px; background: #FFC107"></div>
+                    <div class="col-xs-3" style="height: 2px; background: #5E35B1"></div>
+                    <div class="col-xs-3" style="height: 2px; background: #00BCD4"></div>
                 </div>
-                <div class="modal-body">
-                    <p class="col-xs-12" style="margin-bottom: 1em">{% trans "Confirm this purchase ?" %}</p>
-                    <form method="post" action="{% url 'shopping:confirm_checkout' %}">{% csrf_token %}
-                        <input type="hidden" id="bank-id" name="bank_id" />
-                        <input type="hidden" id="deal-id" name="deal_id" />
-                        <div class="col-xs-12 col-sm-4 col-md-3 pull-right">
-                            <button type="submit"
-                               class="btn btn-sm btn-success btn-block">{% trans "OK" %}</button>
-                        </div>
-                        <div class="col-xs-12 col-sm-4 col-md-3 pull-right">
-                            <button type="button" class="btn btn-sm btn-danger btn-block"
-                                    data-dismiss="modal" aria-label="Close">{% trans "Cancel" %}</button>
-                        </div>
-                    </form>
-                    <div class="clearfix"></div>
+            {% endif %}
+            <div class="col-xs-12 col-sm-4 col-lg-3" style="float: none; margin: auto">
+                <div class="form-group amount" style="margin-top: .4em">
+                    <label for="amount" class="sr-only">{% trans "Amount" %}</label>
+                    <input id="amount" class="form-control input-sm" type="text"
+                           name="amount" value="{{ amount }}" placeholder="1000" />
+                </div>
+                <div class="form-group">
+                    <button id="show-payment-methods" class="btn btn-success btn-block btn-sm"
+                            data-toggle="modal" data-target="#payment-methods"> {% trans "Submit" %} </button>
                 </div>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="login-to-continue" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content modal-info">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">{% trans "Sign in" %}</h4>
-                </div>
-                <div class="modal-body">
-                    <p class="col-xs-12" style="margin-bottom: 1em">{% trans "Please sign in to continue" %}</p>
-                    <div class="col-xs-12 col-sm-4 col-md-3 pull-right">
-                        <a href="{% url 'ikwen:sign_in' %}next={{ request.META.REQUEST_URI }}"
-                           class="btn btn-sm btn-success btn-block do-empty-cart">{% trans "Sign in" %}</a>
-                    </div>
-                    <div class="col-xs-12 col-sm-4 col-md-3 pull-right">
-                        <a href="{% url 'ikwen:register' %}next={{ request.META.REQUEST_URI }}"
-                           class="btn btn-sm btn-warning btn-block">{% trans "Register" %}</a>
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% with payment_conf='donation' %}
+    {% include 'billing/snippets/modal_payment_options.html' %}
+    {% endwith %}
 {% endblock %}
 {% block js %}
     {{ block.super }}
     <script type="text/javascript">
         (function() {
-            $('#content').on('click', '.deal .choose', function() {
-                {% if user.is_authenticated %}
-                    var bankId = $(this).data('bank-id'),
-                        dealId = $(this).data('id');
-                    $('#bank-id').val(bankId);
-                    if (dealId) $('#deal-id').val(dealId);
-                    $('#confirm-checkout').modal('show');
-                {% endif %}
-            })
+            $('#show-payment-methods').click(function() {
+                $('.form-group.amount .errorlist').remove();
+                var $amount = $('#amount'),
+                    amount = $amount.val().replace(/ /g, '');
+                $amount.val(amount);
+                if (amount && !/\d{2,}/.test(amount)) {
+                    $('<ul class="errorlist amount">' +
+                        '<li>' + "{% trans "Please use digits only. (Eg. 1000)" %}" + '</li>' +
+                        '<li>' + "{% trans "Minimum is 10" %}" + '</li>' +
+                        '<ul>').insertAfter('#amount');
+                    return false
+                }
+                $('#donation-amount').val(amount)
+            });
+            $('.payment-method.om').click(function() {
+                $('.om-instructions').show();
+            });
+            $('.payment-method .continue').click(function() {
+                var actionURL = $(this).data('action-url');
+                $('form#checkout').attr('action', actionURL).submit();
+            });
         })()
     </script>
     {{ config.scripts|safe }}
