'payment_mean_list' in PaymentMeanList context changed to 'payment_mean_list_all' to avoid collisions with 'payment_mean_list' from ikwen.billing.context_processors.payment_mean_list

--- a/billing/templates/billing/payment_mean_list.html
+++ b/billing/templates/billing/payment_mean_list.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
             <div id="results">
                 <ul class="object-list" style="padding: 20px 0 0 0">
-                {% for mean in payment_mean_list %}
+                {% for mean in payment_mean_list_all %}
                     <li class="ik-li mean" id="{{ mean.id }}" data-id="{{ mean.id }}"
                             {% for key, value in mean.credentials.items  %}data-{{ key }}="{{ value }}"{% endfor %}>
                         <i class="glyphicon glyphicon-ok check{% if mean.is_active %} active{% endif %}"
