--- a/billing/templates/billing/snippets/modal_payment_options.html
+++ b/billing/templates/billing/snippets/modal_payment_options.html
@@ -11,7 +11,7 @@
                     <input type="hidden" id="product-id" name="product_id" />
                     <input type="hidden" name="payment_conf" value="{% if payment_conf %}{{ payment_conf }}{% else %}default{% endif %}" />
                     <ul class="row">
-                        <li class="col-sm-4 payment-method{% if not config.is_pro_version and not config.allow_cash_payment %} col-sm-offset-2{% endif %}"
+                        <li class="col-sm-4 payment-method{% if payment_mean_list|length == 2 %} col-sm-offset-2{% endif %}"
                             {% if mtn_momo %}data-action-url="{% url mtn_momo.action_url_name %}{% endif %}">
                             <a class="logo" style="background: #ffca06" title="{% trans "Pay with MTN Mobile Money" %}">
                                 <img src="{% static 'ikwen/img/logo_mtn_mobile_money.jpg' %}" height="90"/>
