--- a/accesscontrol/templates/accesscontrol/sign_in_minimal.html
+++ b/accesscontrol/templates/accesscontrol/sign_in_minimal.html
@@ -8,15 +8,11 @@
 {% endblock %}
 
 {% block content %}
-    <div id="content" class="form container">
+    <div id="content" class="form container init">
         <p class="failure" style="display: none; font-size: 1em; padding: 9px"></p>
         {% if messages %}
             {% for msg in messages %}<p class="msg-tag {{ msg.tags }}" style="font-size: 1em; padding: 9px">{{ msg }}</p>{% endfor %}
         {% endif %}
-        <div class="welcome">
-            <p style="margin-bottom: 0">{% trans "Welcome, your password is" %}:</p>
-            <p class="default-pwd">{{ pwd }}</p>
-        </div>
         <div id="stage" class="form-wrapper subtle-shade">
             <h3 class="login-title">
                 {% if config.logo.name %}
@@ -25,7 +21,7 @@
                 {% endif %}
                 {% trans "Login" %}
             </h3>
-            <form id="login" action="{{ action }}" method="post" class="init">{% csrf_token %}
+            <form id="auth" action="{{ action }}" method="post">{% csrf_token %}
                 <div class="form-group row username">
                     <label for="username" class="col-sm-5 col-md-4">{% trans "Username or email" %}</label>
                     <div class="col-sm-7 col-md-8">
@@ -34,9 +30,9 @@
                 </div>
                 <div class="form-group submit-username">
                     {% if settings.IS_UMBRELLA %}
-                        <button class="btn btn-primary btn-block btn-sm"> {% trans "Submit" %} </button>
+                        <button class="btn btn-primary btn-block btn-sm" type="button"> {% trans "Submit" %} </button>
                     {% else %}
-                        <button class="btn btn-primary btn-block btn-sm login-with-ikwen">
+                        <button class="btn btn-primary btn-block btn-sm login-with-ikwen" type="button">
                             <img height="26" />
                             {% blocktrans %}Login with <strong>ikwen</strong>{% endblocktrans %}
                         </button>
@@ -46,13 +42,10 @@
                     </div>
                 </div>
                 <div class="create-account">
-                    <a href="javascript:;" class="show-change-pwd">{% trans "Change password now" %}</a>
-                    <div class="change-pwd">
-                        <div class="form-group row password2">
-                            <label for="password2" class="col-sm-5 col-md-4">{% trans "Confirm password" %}</label>
-                            <div class="col-sm-7 col-md-8">
-                                <input id="password2" class="form-control input-sm confirm-password" type="password" name="password2" />
-                            </div>
+                    <div class="form-group row password2">
+                        <label for="password2" class="col-sm-5 col-md-4">{% trans "Confirm password" %}</label>
+                        <div class="col-sm-7 col-md-8">
+                            <input id="password2" class="form-control input-sm confirm-password" type="password" name="password2" />
                         </div>
                     </div>
                     <div class="form-group row email">
@@ -64,7 +57,7 @@
                     <div class="form-group row phone">
                         <label for="phone" class="col-sm-5 col-md-4">{% trans "Phone number" %}</label>
                         <div class="col-sm-7 col-md-8">
-                            <input id="phone" class="form-control input-sm" type="text" name="phone"/>
+                            <input id="phone" class="form-control input-sm required" type="text" name="phone"/>
                         </div>
                     </div>
                     <div class="form-group row first-name">
@@ -79,6 +72,9 @@
                             <input id="last-name" class="form-control input-sm" type="text" name="last_name"/>
                         </div>
                     </div>
+                    {% if settings.REGISTER_WITH_DOB %}
+                        {% include "accesscontrol/snippets/dob_widget.html" %}
+                    {% endif %}
                 </div>
                 <div class="form-group row password">
                     <label for="password" class="col-sm-5 col-md-4">{% trans "Password" %}</label>
@@ -116,8 +112,9 @@
                     </div>
                 </div>
                 <div class="form-group submit">
-                    <button id="cancel" class="btn btn-default btn-sm hidden-xs" type="button"> {% trans "Cancel" %} </button>
-                    <button id="submit" class="btn btn-primary btn-block btn-sm cta" type="submit"> {% trans "Submit" %} </button>
+                    <button id="cancel" class="btn btn-default btn-sm hidden-xs" type="button"> {% trans "Back" %} </button>
+                    <button id="continue" class="btn btn-primary btn-block btn-sm continue" type="button"> {% trans "Continue" %} </button>
+                    <button id="submit" class="btn btn-success btn-block btn-sm cta" type="submit"> {% trans "Submit" %} </button>
                     {% url 'ikwen:forgotten_password' as forgotten_password_url %}
                     <a class="forgotten-pwd" href="{{ forgotten_password_url|ikwenize }}">{% trans "Forgotten password ?" %}</a>
                     <div class="clearfix"></div>
@@ -136,29 +133,73 @@
             $(window).on('hashchange', function() {
                 if (location.hash.length < 1) {
                     $('.form-group.password').insertBefore('.terms').find('label').text("{% trans "Password" %}");
-                    $('#login').addClass('init');
                     $('#stage').addClass('form-wrapper').removeClass('col-sm-9 col-md-8');
-                    $('#content').removeClass('register');
+                    $('#content').addClass('init').removeClass('register');
+                    $('#username').focus();
+                } else if (location.hash.indexOf('step1') > 0) {
+                    $('#content').removeClass('step2').addClass('step1');
+                    $('#password').focus();
                 }
             });
-            $('body').on('click', '.submit-username', checkUsername)
-            .on('click', '.show-change-pwd', function() {
-                $('#password, #password2').val('');
-                $('.change-pwd').css('height', 'auto');
-                pwdMinLength = 6
-            }).on('click', '#cancel', function() {
+            $('body').on('click', '.submit-username .btn', checkUsername)
+            .on('click', '#cancel', function() {
                 window.history.back();
+            }).on('click', '#continue', function() {
+                $('.errorlist').remove();
+                var goToNext = true;
+                if (!testUsername()) goToNext = false;
+                if (!testPassword()) goToNext = false;
+                if ($('#email').hasClass('required')) {
+                    if (!testEmail()) goToNext = false;
+                }
+                if ($('#phone').hasClass('required') || $('#phone').val()) {
+                    if (!testPhone()) goToNext = false;
+                }
+                if (!goToNext) return;
+                $('#content').removeClass('step1').addClass('step2');
+                $('#first-name').focus();
+                location.hash = 'register-step2';
             }).on('click', '#accept-terms', function() {
                 if ($(this).prop('checked')) {
                     $('#submit').removeProp('disabled').removeClass('default')
                 } else $('#submit').prop('disabled', true).addClass('default')
+            }).on('click', '#submit', function() {
+                if ($('#content').hasClass('register step2')) {
+                    $('.errorlist').remove();
+                    {% if settings.REGISTER_WITH_DOB %}
+                        if (!checkDOB()) return false;
+                    {% endif %}
+                    if (!$('#accept-terms').prop('checked')) return false;
+                }
+            }).on('keydown', '#auth input, #auth select', function(e) {
+                // This Manages what happens when we press enter in the form
+                // returning false on $(form).submit() does not prevent the
+                // form from being submitted, so we use this hack instead.
+                if (e.keyCode === 13) {
+                    $('.errorlist').remove();
+                    if ($('#content').hasClass('init')) {
+                        e.preventDefault();
+                        checkUsername();
+                    }
+                    if ($('#content').hasClass('register step1')) {
+                        e.preventDefault();
+                        $('#continue').click();
+                        return;
+                    }
+                    if ($('#content').hasClass('register step2')) {
+                        {% if settings.REGISTER_WITH_DOB %}
+                            if (!checkDOB()) e.preventDefault();
+                        {% endif %}
+                        if (!$('#accept-terms').prop('checked')) e.preventDefault();
+                    }
+                }
             });
             $('#username').keyup(function(e) {
                 if (e.key === ' ') {
                     var username = $(this).val().trim().toLowerCase();
                     $(this).val(username);
                 }
-            }).blur(testUsername);
+            }).blur(function() {testUsername()});
             $('#email').blur(testEmail);
             $('#phone').blur(testPhone);
             function testUsername(uname) {
@@ -173,7 +214,7 @@
                     $('<ul class="errorlist username">' +
                         '<li>' + "{% trans "Please use at least 3 characters." %}" + '</li>' +
                         '<li>' + "{% trans "Start with a letter." %}" + '</li>' +
-                        '<ul>').insertAfter('#username');
+                        '</ul>').insertAfter('#username');
                     $username.focus();
                     return false;
                 }
@@ -188,7 +229,7 @@
                     return true;
                 }
                 $('.form-group.email .errorlist').remove();
-                $('<ul class="errorlist email"><li>' + "{% trans "Please, enter valid email" %}" + '</li><ul>')
+                $('<ul class="errorlist email"><li>' + "{% trans "Please, enter valid email" %}" + '</li></ul>')
                         .insertAfter('#email');
                 $email.focus();
                 return false;
@@ -198,12 +239,12 @@
                 var $phone = $('#phone'),
                     phone = $phone.val().replace(/ /g, '');
                 $phone.val(phone);
-                if (phone && !/\d{9,}/.test(phone)) {
+                if (phone.substr(0, 2) === '00' || !/\d{9,}/.test(phone)) {
                     $('<ul class="errorlist phone">' +
                         '<li>' + "{% trans "Please use digits only." %}" + '</li>' +
                         '<li>' + "{% trans "Prepend country code if you are not in Cameroon." %}" + '</li>' +
                         '<li>' + "{% trans "DO NOT prepend 00." %}" + '</li>' +
-                        '<ul>').insertAfter('#phone');
+                        '</ul>').insertAfter('#phone');
                     return false
                 }
                 return true;
@@ -215,71 +256,68 @@
                 if (pwd1.length < pwdMinLength) {
                     $('<ul class="errorlist password">' +
                         '<li>' + "{% trans "Password too short. Use at least 6 characters." %}" + '</li>' +
-                        '<ul>').insertAfter('#password');
+                        '</ul>').insertAfter('#password');
                     return false
                 }
                 if (pwd1 !== pwd2) {
                     $('<ul class="errorlist password">' +
                         '<li>' + "{% trans "Passwords mismatch! Please check." %}" + '</li>' +
-                        '<ul>').insertAfter('#password2');
+                        '</ul>').insertAfter('#password2');
                     return false
                 }
                 return true;
             }
-            $('#login').submit(function() {
-                if ($('#login').hasClass('init')) {
-                    checkUsername();
-                    return false;
-                }
-                if ($(this).hasClass('register')) {
-                    if (!$('#accept-terms').prop('checked')) return false;
-                    if (!testPassword()) return false;
-                    if ($('#email').hasClass('required')) {
-                        if (!testEmail()) return false;
-                    }
-                    if ($('#phone').hasClass('required') || $('#phone').val()) {
-                        return testPhone()
-                    }
-                }
-            });
 
             function checkUsername() {
                 var username = $('#username').val().toLowerCase();
                 if (!username) return false;
                 if (!testUsername(username)) return false;
-                $('#login .spinner').css('visibility', 'visible');
+                $('#auth .spinner').css('visibility', 'visible');
                 $.ajax({
                     url: '{% url 'ikwen:sign_in' %}',
                     data: {username: username},
                     error: function(req, status, error) {
-                        $('#login .spinner').css('visibility', 'hidden');
+                        $('#auth .spinner').css('visibility', 'hidden');
                         $('#content .failure').show().html("{% trans "Oops! An error occurred. Check your internet." %}");
                     },
                     success: function(data) {
-                        $('#login .spinner').css('visibility', 'hidden');
-                        $('#login').removeClass('init');
+                        $('#auth .spinner').css('visibility', 'hidden');
+                        $('#content').removeClass('init');
                         if (data.existing) {
                             location.hash = 'login';
                             $('#password').focus();
-                            $('#login').prop('action', "{% url 'ikwen:do_sign_in' %}?{{ request.META.QUERY_STRING }}");
+                            $('#auth').prop('action', "{% url 'ikwen:do_sign_in' %}?{{ request.META.QUERY_STRING }}");
                             if (username.isValidEmail()) {
                                 $('.forgotten-pwd').prop('href', '{{ forgotten_password_url|ikwenize }}' + '?' + 'username=' + username);
                             }
                         } else {
-                            $('#content').hide().addClass('register').fadeIn();
+                            $('#content').hide().addClass('register step1').fadeIn('normal', 'linear', function() {
+                                $('#password').focus();
+                            });
                             $('#stage').removeClass('form-wrapper').addClass('col-sm-9 col-md-8');
                             if (username.isValidEmail()) {
                                 $('#email').val(username);
                                 $('.form-group.email').hide();
                             }
-                            $('.form-group.password').prependTo('.change-pwd').find('label').text("{% trans "Choose password" %}");
+                            $('.form-group.password').prependTo('.create-account').find('label').text("{% trans "Choose a password" %}");
                             $('.default-pwd').text(data.pwd);
                             $('#password, #password2').val(data.pwd);
-                            location.hash = 'register';
-                            $('#login').prop('action', "{% url 'ikwen:register' %}?{{ request.META.QUERY_STRING }}");
+                            location.hash = 'register-step1';
+                            $('#auth').prop('action', "{% url 'ikwen:register' %}?{{ request.META.QUERY_STRING }}");
                         }
                     }
-                })
+                });
+            }
+            function checkDOB() {
+                var day = parseInt($('#day').val()),
+                    month = parseInt($('#month').val()),
+                    year = parseInt($('#year').val()),
+                    d = new Date(year + '/' + month + '/' + day);
+                if (!(d.getDate() === day && d.getMonth() === (month - 1) && d.getFullYear() === year)) {
+                    $('<p class="errorlist">{% trans "Invalid date. Please check." %}</p>').appendTo('#dob');
+                    return false;
+                }
+                return true;
             }
         })()
     </script>
