Rules for Support of Date of Birth in Registration form.

--- a/static/ikwen/css/sign-in.css
+++ b/static/ikwen/css/sign-in.css
@@ -11,35 +11,51 @@ html, body {height: 100%}
 body {background: #f8f6f6 url(../../ikwen/img/signin-bg.jpg) no-repeat center fixed; background-size: cover}
 #content.form.register {padding-top: 3%}
 #stage {background: #fff; border-radius: 4px; float: none; padding: 0}
-.login-title {border-bottom: 1px solid #eee; margin-top: 0; padding: 1.3em 0 1em; text-align: center}
+.login-title, .register-title {border-bottom: 1px solid #eee; margin-top: 0; padding: 1.3em 0 1em; text-align: center}
 .login-title img {border-radius: 4px; height: 40px}
+.register-title {font-weight: 300}
+.register-title img {float: left}
 label span {font-weight: normal}
 .spinner {color: #2c3e50; height: 25px; margin-top: 15px; text-align: center; visibility: hidden}
 .welcome {color: #fff; display: none; font-family: "Lato", "PT Sans", sans-serif; font-size: 1.6em; font-weight: 300; overflow: hidden; text-align: center; }
 .default-pwd {font-size: 2em}
-.show-change-pwd {display: block; margin: -12px 0 15px; text-align: right}
 .change-pwd {height: 0; overflow: hidden; transition: height .3s}
 #content.form form {border: none; margin-top: 0; padding: 15px 30px 40px}
 .form-group.username {height: 0; overflow: hidden; margin-bottom: 0}
 .form-group.password {height: auto; overflow: hidden}
 .form-group.submit-username {display: none}
 #username, #email {text-transform: lowercase}
-#cancel {display: none}
-#content.form.register #cancel {display: block; float: left; width: 180px}
+#cancel.btn {float: left; width: 180px}
+#content.register #continue.btn, #content.register #submit.btn {float: right; width: 180px}
 .login-with-ikwen {font-size: 1em; height: 40px; letter-spacing: .5px; padding: 6px 9px 8px}
 .login-with-ikwen img {content: url(../../ikwen/img/logo_ikwen_symbol_30x30.png); margin: -4px 5px 0 0}
 .login-with-ikwen strong {color: #7ea6ca}
 .forgotten-pwd {float: left; margin-top: 7px}
 .init .col-sm-5, .init .col-md-4, .init .col-sm-7, .init .col-md-8 {padding: 0; width: auto}
-#login > .form-group.password > * {float: none; width: auto}
+#auth > .form-group.password > * {float: none; width: auto}
+.dob .col-xs-4 {padding: 0 5px}
+.dob .col-xs-4:first-of-type {padding-left: 15px}
+.dob .col-xs-4:last-of-type {padding-right: 15px}
+.dob .errorlist {margin: -13px 0 0;text-align: right;}
+.why-dob {display: block; font-size: 11px; margin: -12px 0 10px 0; text-align: right}
 .init .row {margin-left: 0; margin-right: 0}
 .init .form-group.username {height: auto; margin-bottom: 15px}
 .init .form-group.username > div {clear: both; float: none}
 .init .form-group.submit-username {display: block}
 .init .form-group.password {height: 0}
-.init .welcome, .create-account, .init .form-group.submit, .terms, .register .forgotten-pwd {display: none}
-.register .welcome, .register .create-account, .register .terms {display: block}
+.create-account, .init .form-group.submit,
+.terms, .register .forgotten-pwd, .register.step2 .form-group.username,
+.register.step2 .form-group.password, .register.step2 .form-group.password2,
+.register.step1 .form-group.first-name, .register.step1 .form-group.last-name,
+.register.step2 .form-group.email, .register.step2 .form-group.phone, .dob,
+#cancel.btn, #continue.btn, .register.step1 #submit {display: none}
+.register .create-account, .register.step2 .terms,
+.register.step1 .form-group.password, .register.step1 .form-group.password2,
+.register.step2 .form-group.first-name, .register.step2 .form-group.last-name,
+.register.step1 .form-group.email, .register.step1 .form-group.phone, .register.step2 .dob,
+.register #cancel, .register.step1 #continue, .register.step2 #submit {display: block}
 .register .form-group.username {height: auto; margin-bottom: 15px}
+select#month {text-transform: capitalize}
 #terms-warning {font-size: 11px}
 footer, footer .company-name {color: #fff}
 
@@ -51,5 +67,5 @@ footer, footer .company-name {color: #fff}
     #content.form form {padding-left: 15px; padding-right: 15px}
 }
 @media (min-width: 992px) {
-    #content.form.register {padding-top: 1.5%}
+    #content.form.register {padding-top: 7%;}
 }
